# CA-RSMOT

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: frozen_cost_agent_config.json  policy_pool_template.csv
cost_agent_mot/: __init__.py  cli.py  executor.py  io_utils.py  llm_adapter.py  metrics.py  planner.py  scheduler.py  schemas.py  stats_encoder.py  verifier.py
docs/: ARTIFACTS.md  CLAIM_BOUNDARY.md  DATA.md  LLM_ADAPTER.md  OFFICIAL_PROTOCOL.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md
examples/toy/: README.md  enhanced_stats.csv  original_stats.csv  policy_pool.csv
paper_support/official_protocol/: frozen_official_agent_test_eval.csv  frozen_official_agent_test_eval.md  official_agent_trainval_selection.csv  official_agent_trainval_selection.md  official_test_paired_significance.csv  official_test_paired_significance.md  official_test_report.csv  official_test_report.md  official_train_val_fold_summary.csv  official_train_val_folds.md
paper_support/tables/: contextual_tracker_baselines.csv  frozen_trace_examples.csv  official_test_scheduler_ablation.csv  official_test_sequence_decisions.csv  policy_pool.csv  runtime_cost_proxy.csv  scheduler_decision_distribution.csv  scheduler_enhanced_overlap.csv  sequence_card_schema.csv  validation_scheduler_curve.csv
scripts/: build_sequence_cards.py  check_anonymity.py  run_cost_agent.py  validate_artifacts.py
tests/: test_llm_adapter.py  test_toy_pipeline.py
(+24 files in other folders)
